css/style.css
/* ... */
body[data-design="option-4"] .card-deck .card {
    background-color: #f8f8f8;
}

body[data-design="option-4"] .card-deck .card-header {
    color: #fff;
    background-image: url("../img/12.jpg");
}

body[data-design="option-4"] .card-deck .card-body {
    color: #212529;
}

body[data-design="option-4"] .card-deck .card-body:hover {
    color: #fff;
}

body[data-design="option-4"] h1 {
    font-size: 1.7rem;
}

body[data-design="option-4"] h2 {
    font-size: 1.6rem;
}

body[data-design="option-4"] h3 {
    font-size: 1.5rem;
}

body[data-design="option-4"] h4 {
    font-size: 1.4rem;
}

body[data-design="option-4"] h5 {
    font-size: 1.3rem;
}

body[data-design="option-4"] .card-header {
    font-size: 0.8rem;
}

body[data-design="option-4"] .btn-outline-primary {
    color: #000;
    border-color: #000;
}

/*END OPTION 4 */
/*portfolio unique sizes*/

.card-header:first-child {
    /*override for bootstrap*/
    border-radius: 0px;
}

.pointer {
    cursor: pointer;
}

#landingPgLinksTarget a {
    padding: .5rem;
}

.btn-group.form-control {
    padding: 0;
}

.mediaStage ul.noStyle h3 {
    text-align: left;
}

.error {
    border: #ff0000 1px solid;
}

.displayMobile {
    display: none;
}

.fa-play-circle,
.fa-camera {
    text-shadow: 0.1px 0.1px 0.1px #888, 0 0 05em #888, 0 0 0.05em #000;
}

/*footer*/

footer {
    -webkit-box-shadow: 0px -4px 3px rgba(0, 0, 0, 0.075);
    -moz-box-shadow: 0px -4px 3px rgba(0, 0, 0, 0.075);
    box-shadow: 0px -4px 3px rgba(0, 0, 0, 0.075);
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    /*
rgb(133, 132, 132)
  */
    background-color: #fff;
    text-align: center;
}

#navWrap {
    padding: 1.6rem !important;
}

.App {
    margin-bottom: 150px;
}

.center {
    margin: auto;
}

#addItem {
    position: absolute;
    z-index: 3;
    margin-top: 15px;
    right: 100px;
}

#addItem button {
    margin-top: 0rem;
}

.container-fluid {
    padding-right: 0px;
    padding-left: 0px;
}

input[type="text"],
input[type="email"],
textarea.form-control,
.btn {
    border-radius: 0px;
}

form .form-group ul {
    list-style-type: none;
    padding-left: 0px;
    padding-top: 20px;
}

.btn-success {
    background-color: #006622;
}

.navbar-brand img {
    width: 120px;
    height: auto;
    cursor: pointer;
    margin-left: -18px;
    margin-top: -33px;
    position: absolute;
    z-index: 9;
}

[data-title] {
    text-align: center;

    padding-bottom: 10px;
}

.landingPgCol ul {
    list-style-type: none;
    padding-top: 15%;
    padding-left: 0px;
}

.landingPgCol img {
    width: 150px;
    height: auto;
    padding-bottom: 15px;
}

/*#items .item {
  background-color: #f8f8f8;
}*/

.imgFrame p,
.imgFrame a {
    font-size: 0.8rem;
    line-height: 1.1;
}

.imgFrame ul li {
    font-size: 1.1rem;
    line-height: 1.4rem;
}

.imgFrame label {
    margin-left: -10px;
}

.imgFrame ul {
    list-style-type: none;

    margin-top: -12px;
}

.card {
    cursor: pointer;
    border-radius: 0px;
    min-height: 325px;
    border: 0px;
    background-color: transparent;
    overflow: hidden;
    margin-bottom: 50px;
}

.card-deck .card-body {
    padding-bottom: 0px;
    min-height: 250px;
}

.card-body .list-unstyled {
    min-height: 100px;
}

.card-body .btn {
    margin: 10px 0px;

    position: absolute;
    bottom: 0;
    left: 0;
}

body[data-design="option-1"] a {
    color: #212529;
}

body[data-design="option-1"] .card-body .btn-outline-primary {
    color: #363636;
    border-color: #363636;
}

body[data-design="option-1"] .card-body .btn-outline-primary:hover,
body[data-design="option-1"] .imgFrame:hover .btn-outline-primary {
    color: #fff;
    background-color: #363636;
}

body[data-design="option-2"] .card-body .btn-outline-primary {
    color: #363636;
    border-color: #fff;
    background-color: #363636;
    color: #fff;
}

body[data-design="option-2"] .card:hover .btn-outline-primary {
    background-color: #dc4c16;
}

#theTitle {
    padding-top: 18px;
    padding-bottom: 25px;
    text-transform: uppercase;
}

.teaserImg {
    position: absolute;
    z-index: 2;
    opacity: 0;
}

.imgIcon img.itemImg {
    position: absolute;
    z-index: 1;
    opacity: 0.25;
    margin-left: -160px;
    margin-top: -80px;
    -webkit-filter: grayscale(100%);
    /* Safari 6.0 - 9.0 */
    filter: grayscale(100%);
}

.imgIcon {
    max-height: 175px;
    overflow: hidden;
}

#items div[class^="col-md"] {
    padding: 0px;
}

.capitalize {
    text-transform: capitalize;
}

.modal {
    padding: 25px 250px;
    display: block;
}

iframe.modalMedia {
    margin: 0 auto;
    width: 560px;
    height: 315px;
}

.modal-body ul {
    padding-left: 0px;
    list-style-type: none;
    font-size: 1rem;
    /*max-width: 560px;*/
}

.modal-body {
    max-height: 425px;
    overflow-y: auto;
}

.userInfo a:hover {
    text-decoration: none;
}

/*start media css*/

.btn-group.btn-block {
    display: block;
    width: 100% !important;

}

.btn-group.btn-block .btn {
    width: 49% !important;

}

.no-gutters {
    padding-right: 0px;
    padding-left: 0px;
}

.mediaFrame {
    width: 100%;
    min-height: 400px;

    z-index: 1031;
}

.videoList {
    max-height: 600px;
    overflow-y: auto;
    overflow-x: hidden;
}

.videoList .list-group,
.videoList .list-group .list-group-item {
    padding: 0px;
    border-top-left-radius: 0rem;
    border-top-right-radius: 0rem;
}




.thumbContainer {
    text-align: center;

    height: 150px;
    overflow: hidden;

    /*background: linear-gradient(#999, #999);*/
}

i.play-float-icon {
    position: absolute;
    z-index: 2;
    font-size: 5rem;
    margin: auto;
    position: absolute;
    transform: translateY(-70%);
    left: 0;
    bottom: 0;
    right: 0;

    /*margin-top: 15%;*/
}

.list-group-item.active {
    z-index: 2;
    color: #fff;
    background-color: #212529;
    border-color: #fff;
}

.list-group-item .img-fluid {
    filter: grayscale(100%);
}
/* ... */

